Added Github canary

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js ie8 oldie" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
 
+<!-- Hosted from Github -->
+
 <!--
 ======================================================================
    __  ___                 _____                ___            __
