Added SoundCloud link

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <!--[if lt IE 7]><html class="no-js ie6 oldie" lang="en"><![endif]-->
 <!--[if (IE 7)&!(IEMobile)]><html class="no-js ie7 oldie" lang="en"><![endif]-->
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js ie8 oldie" lang="en"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+	<!--<![endif]-->
 
-<!-- Hosted from Github -->
+	<!-- Hosted from Github -->
 
-<!--
+	<!--
 ======================================================================
    __  ___                 _____                ___            __
   /  |/  /__ ___ ____ __  / ___/______ __    __/ _/__  _______/ /
@@ -17,59 +19,68 @@
 ======================================================================
 -->
 
-<head>
-<meta charset="utf-8">
-<title>Hensel</title>
+	<head>
+		<meta charset="utf-8">
+		<title>Hensel</title>
 
-<meta name="keywords" content="hensel, music, henselnoise, noise, maxx, crawford, electro, acoustic, tulsa, ok, oklahoma, maxx crawford">
-<meta name="description" content="Hensel is an electro-acousitc band from Tulsa, OK. Hensel can be described as the ravin' dance oasis of the acoustic pop world. Being catchy comes second nature to this loop-driven solo-acoustic artist.">
-<meta name="author" content="Maxx Crawford">
-<meta name="robots" content="index, follow">
+		<meta name="keywords" content="hensel, music, henselnoise, noise, maxx, crawford, electro, acoustic, tulsa, ok, oklahoma, maxx crawford">
+		<meta name="description" content="Hensel is an electro-acousitc band from Tulsa, OK. Hensel can be described as the ravin' dance oasis of the acoustic pop world. Being catchy comes second nature to this loop-driven solo-acoustic artist.">
+		<meta name="author" content="Maxx Crawford">
+		<meta name="robots" content="index, follow">
 
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<!-- http://t.co/dKP3o1e -->
-<meta name="HandheldFriendly" content="true">
-<meta name="MobileOptimized" content="320">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- http://t.co/dKP3o1e -->
+		<meta name="HandheldFriendly" content="true">
+		<meta name="MobileOptimized" content="320">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="shortcut icon" href="/favicon.ico">
+		<link rel="shortcut icon" href="/favicon.ico">
 
-<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 
-<script src="js/libs/modernizr.custom.js"></script>
-<!--[if lt IE 9]>
+		<script src="js/libs/modernizr.custom.js"></script>
+		<!--[if lt IE 9]>
 	<script src="js/libs/ie/selectivizr.min.js"></script>
 	<script src="js/libs/ie/respond.min.js"></script>
 <![endif]-->
-</head>
+	</head>
 
-<body class="background">
-<div class="background">
-	<div class="wrapper">
-		<h1>Hensel</h1>
-		<a class="link" href="http://twitter.com/henselnoise" target="_blank">TWITTER</a>
-		<a class="link red" href="http://facebook.com/henselnoise" target="_blank">FACEBOOK</a>
-		<a class="link yellow" href="http://hensel.bandcamp.com" target="_blank">BANDCAMP</a>
-		<a class="link teal" href="http://www.sonicbids.com/band/hensel/" target="_blank">SONICBIDS</a>
-		<a class="link purple" href="https://www.youtube.com/user/henselnoise" target="_blank">YOUTUBE</a>
-		<a class="link blue" href="mailto:henselnoise@gmail.com?subject=Hensel%20-%20Contact/Booking" target="_blank">CONTACT</a>
-		<cite>&copy; Hensel Music Company <script>document.write(new Date().getFullYear());</script></cite>
-	</div>
-</div>
+	<body class="background">
+		<div class="background">
+			<div class="wrapper">
+				<h1>Hensel</h1>
+				<a class="link teal" href="https://soundcloud.com/henselnoise" target="_blank">SOUNDCLOUD</a>
+				<a class="link yellow" href="http://hensel.bandcamp.com" target="_blank">BANDCAMP</a>
+				<a class="link" href="http://twitter.com/henselnoise" target="_blank">TWITTER</a>
+				<a class="link red" href="http://facebook.com/henselnoise" target="_blank">FACEBOOK</a>
+				<a class="link purple" href="https://www.youtube.com/user/henselnoise" target="_blank">YOUTUBE</a>
+				<a class="link blue" href="mailto:henselnoise@gmail.com?subject=Hensel%20-%20Contact/Booking" target="_blank">CONTACT</a>
+				<cite>&copy; Hensel Music Company <script>
+						document.write(new Date().getFullYear());
+					</script></cite>
+			</div>
+		</div>
 
 
-<!-- Scripts -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		<!-- Scripts -->
+		<script>
+			(function(i, s, o, g, r, a, m) {
+				i['GoogleAnalyticsObject'] = r;
+				i[r] = i[r] || function() {
+					(i[r].q = i[r].q || []).push(arguments)
+				}, i[r].l = 1 * new Date();
+				a = s.createElement(o),
+					m = s.getElementsByTagName(o)[0];
+				a.async = 1;
+				a.src = g;
+				m.parentNode.insertBefore(a, m)
+			})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-23592216-1', 'henselnoise.com');
-  ga('send', 'pageview');
+			ga('create', 'UA-23592216-1', 'henselnoise.com');
+			ga('send', 'pageview');
+		</script>
+	</body>
 
-</script>
-</body>
 </html>
