--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 		<meta name="author" content="Maxx Crawford">
 		<meta name="robots" content="index, follow">
 
+		<meta property="og:title" content="Hensel" />
+		<meta property="og:description" content="Hensel is an electro-acousitc band from Tulsa, OK." />
+		<meta property="og:url" content="https://henselnoise.com" />
+		<meta property="og:image" content="https://henselnoise.com/img/social.jpg" />
 
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -40,6 +44,40 @@
 
 		<link rel="stylesheet" href="css/style.css" />
 
+		<style>
+			html {
+				box-sizing: border-box;
+			}
+			*, *:before, *:after {
+				box-sizing: inherit;
+			}
+
+			@media (prefers-reduced-motion) {
+				.background {
+					background-image: none;
+				}
+			}
+
+			
+			.link {
+				padding-top: 16px;
+			}
+
+			.link { color: #0fc6cc; display: block; text-align: center; letter-spacing: 3px; font-size: 4em; margin: 10px 0 0; padding: 10px 20px; background: rgba(0, 0, 0, 0.8); }
+			.link:hover { color: #f5d400; }
+			.yellow { color: #f5d400; }
+			.yellow:hover { color: #0fc6cc; }
+			.red { color: #e43824; }
+			.red:hover { color: #4edd83; }
+			.teal { color: #4edd83; }
+			.teal:hover { color: #e43824; }
+			.purple { color: #783c98; }
+			.purple:hover { color: #fb9a10; }
+			.blue { color: #0fc6cc; }
+			.blue:hover { color: #e43824; }
+
+		</style>
+
 		<script src="js/libs/modernizr.custom.js"></script>
 		<!--[if lt IE 9]>
 	<script src="js/libs/ie/selectivizr.min.js"></script>
@@ -47,23 +85,30 @@
 <![endif]-->
 	</head>
 
-	<body class="background">
-		<div class="background">
-			<div class="wrapper">
-				<h1>Hensel</h1>
-				<a class="link teal" href="https://soundcloud.com/henselnoise" target="_blank">SOUNDCLOUD</a>
-				<a class="link yellow" href="http://hensel.bandcamp.com" target="_blank">BANDCAMP</a>
-				<a class="link" href="http://twitter.com/henselnoise" target="_blank">TWITTER</a>
-				<a class="link red" href="http://facebook.com/henselnoise" target="_blank">FACEBOOK</a>
-				<a class="link purple" href="https://www.youtube.com/user/henselnoise" target="_blank">YOUTUBE</a>
-				<a class="link blue" href="mailto:henselnoise@gmail.com?subject=Hensel%20-%20Contact/Booking" target="_blank">CONTACT</a>
-				<cite>&copy; Hensel Music Company <script>
+	<body class="background bg-black">
+		<div class=" ">
+			<div class="wrapper ">
+				<div class=" pt-24 text-stone-200"><h1 class="text-9xl md:text-[150px] lg:text-[200px] ">Hensel</h1></div>
+
+				<div class="flex flex-col gap-8 ">
+					<a class="bg-black/80 text-6xl md:text-7xl lg:text-8xl block pt-8 pb-2 text-center teal hover:bg-black/95" href="https://soundcloud.com/henselnoise" target="_blank">SOUNDCLOUD</a>
+					<a class="bg-black/80 text-6xl md:text-7xl lg:text-8xl block pt-8 pb-2 text-center yellow hover:bg-black/95" href="https://hensel.bandcamp.com" target="_blank">BANDCAMP</a>
+					<a class="bg-black/80 text-6xl md:text-7xl lg:text-8xl block pt-8 pb-2 text-center blue hover:bg-black/95" href="https://twitter.com/henselnoise" target="_blank">TWITTER</a>
+					<a class="bg-black/80 text-6xl md:text-7xl lg:text-8xl block pt-8 pb-2 text-center red hover:bg-black/95" href="https://facebook.com/henselnoise" target="_blank">FACEBOOK</a>
+					<a class="bg-black/80 text-6xl md:text-7xl lg:text-8xl block pt-8 pb-2 text-center purple hover:bg-black/95" href="https://www.youtube.com/user/henselnoise" target="_blank">YOUTUBE</a>
+					<a class="bg-black/80 text-6xl md:text-7xl lg:text-8xl block pt-8 pb-2 text-center blue hover:bg-black/95" href="mailto:henselnoise@gmail.com?subject=Hensel%20-%20Contact/Booking" target="_blank">CONTACT</a>
+				</div>
+				<cite>&copy; Hensel Music Company 
+					<script>
 						document.write(new Date().getFullYear());
-					</script></cite>
+					</script>
+				</cite>
 			</div>
 		</div>
 
 
+		<script src="https://cdn.tailwindcss.com"></script>
+		
 		<!-- Scripts -->
 		<script>
 			(function(i, s, o, g, r, a, m) {
